--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -5,7 +5,7 @@
     
       <!-- Modal content-->
      
-     	<div class="modal-header bgbl">
+     	<div class="modal-header ">
 	       <button type="button" class="close colorb" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">X</button>
 	       <h3 class="modal-title colorb">Ola!</h3>
 	    </div>
@@ -135,6 +135,7 @@
 		          	
 		          	<div class="form-group">
 		          		<span style="color:white">Start Date</span>
+		          		
 			          	<div >
 			          		<div class="col-md-6 datepckr" ng-controller="DatepickerDemoCtrl">
 					            <p class="input-group">
