--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -429,7 +429,7 @@
                 
             }
             #user_hist_div1  {
-                background:rgba(0,0,0,0.1);
+                background:rgb(230,230,230);
                 z-index: 100;
                 position: relative;
                  
