--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -8,7 +8,7 @@ body {
             top:0px;
             margin:0px;
             /*font-family:"verdane";*/
-           letter-spacing: 1.5px;
+           letter-spacing: 1px;
          /*   background-image:  url("http://10steps.sg/wp-content/uploads//2012/11/White-christmas-light-background.jpg");*/
             font-size: 12px;
 
@@ -202,18 +202,32 @@ li:hover#nav_li, li:active#nav_li{
     width: 25px;
     height: auto;
 }
-#notifDropDown li a {
+#notifDropDown> li >a {
+    padding:  10px;
+}
+#notifDropDown> li a md-list-item {
     padding:  0px;
+}
+#notifDropDown li div {
+    padding:  10px;
+    color: white;
+    background-color: #212121;
 }
 #notifDropDown #img_name{
     color: rgba(0,0,0,0.8);
     width: 100%;
 }
+.nav-stacked > li + li{
+    margin: 0px;
+}
+.nav-pills > li > a{
+    border-radius: 0px;
+}
 #notifMenu {
     width: 145px;
     float: left;
     
-    padding: 4px;
+    padding: 0px;
 
 }
 
@@ -224,7 +238,7 @@ li:hover#nav_li, li:active#nav_li{
     padding: 0px 10px;
 }
 #notifMenu li   {
-    padding: 4px;
+    padding: 0px;
 
 }
 #notifs {
