--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -74,6 +74,14 @@
 		border-bottom: 1px solid rgba(0,0,255,0.2);	
 		border-left: 1px solid rgba(0,0,255,0.2);
 		background-color: white;
+		-webkit-transition: all 0.5s ease;
+                     -moz-transition: all 0.5s ease;
+                       -o-transition: all 0.5s ease;
+                      -ms-transition: all 0.5s ease;
+                          transition: all 0.5s ease;
+	}
+	.notif_div:hover{
+		background-color: rgb(240,240,240);
 	}
 	.w2bfade	{
 		display: block;
