Profile designed, very clean now

--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -5,7 +5,7 @@
     
       <!-- Modal content-->
      
-     	<div class="modal-header ">
+     	<div class="modal-header bgw">
 	       <button type="button" class="close colorb" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">X</button>
 	       <h3 class="modal-title colorb">Ola!</h3>
 	    </div>
