--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -13,15 +13,13 @@
                     text-align:left;
             }
             #user_profile   {
-               z-index: 10000;
+               z-index: 100;
                 position: absolute;
                 text-align: center;
                 top: 200px;
                 width: 500px;
                 left: 31.6%;
                 padding: 20px !important;
-                background: white none repeat scroll 0% 0%;
-                box-shadow: 0px 1px 3px grey;
             }
 
             #user_profile_wrapper{
@@ -30,8 +28,13 @@
             }
             #dp {
                border-radius: 50%;
-               margin: 0px 33.33%;
                width: 100px;
+               height: auto;
+
+            }
+            #dpsm {
+               border-radius: 50%;
+               width: 25px;
                height: auto;
 
             }
@@ -51,6 +54,7 @@
                 top:0px;
                 min-height: 500px;
                 overflow: hidden;
+                background-color: black;
             }
             #infodiv    {
                 position: static;
@@ -69,12 +73,20 @@
                 z-index: 2;
             }
             #pro_name   {
-                font-size: 30px;  
+                font-size: 40px;  
                 margin-bottom: 10px;              
-                padding: 0px;
+                padding: 30px 0px 0px 0px;
                 border-radius: 4px;
-                color: grey;
+                color:rgba(255,255,255,1);
+                font-family: 'Abel',Arial;
 
+            }
+            #vedik_pro{
+                font-size: 18px;
+                padding: 50px 0px;
+                text-align: left;
+                color: rgba(255,255,255,0.8);
+                font-family: 'Abel',Arial;
             }
             #uploadNew    {
                 width: 100%;
@@ -210,7 +222,7 @@
                 line-height: 25px;
                 letter-spacing: 2px;
                 font-size: 14px;
-                display: none;
+                display: block;
                 z-index: 1;
                 word-wrap: break-word;
 
