--- a/client/app/club/club.css
+++ b/client/app/club/club.css
@@ -37,12 +37,12 @@
     padding: 2px 0px;
 }
 .list_heading{
-    color: #FFF;
+    color: grey;
     padding: 20px !important;
     width: 100%;
     position: relative;
     font-weight: bold;
-    background-color: rgb(130, 184, 245);
+    background-color: rgb(240,240,250);
     text-align: center;
     font-family: arial;
     font-size: 14px;
