--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -16,7 +16,7 @@
                z-index: 100;
                 position: absolute;
                 text-align: center;
-                top: 200px;
+                top: 160px;
                 width: 500px;
                 left: 31.6%;
                 padding: 20px !important;
@@ -30,6 +30,7 @@
                border-radius: 50%;
                width: 100px;
                height: auto;
+               border: 5px solid white;
 
             }
             #dpsm {
@@ -74,8 +75,9 @@
             }
             #pro_name   {
                 font-size: 40px;  
-                margin-bottom: 10px;              
-                padding: 30px 0px 0px 0px;
+                margin-bottom: 10px;    
+                padding: 0px 10px;          
+            /*    padding: 30px 0px 0px 0px;*/
                 border-radius: 4px;
                 color:rgba(255,255,255,1);
                 font-family: 'Abel',Arial;
@@ -83,10 +85,24 @@
             }
             #vedik_pro{
                 font-size: 18px;
-                padding: 50px 0px;
                 text-align: left;
                 color: rgba(255,255,255,0.8);
                 font-family: 'Abel',Arial;
+                height: 200px;
+                padding: 89px 0px;
+            }
+            .valignOut{
+                display: flex;
+                justify-content: center; /* align horizontal */
+                align-items: center;
+                  height: 200px;
+                  line-height: 100px;
+                  text-align: center;
+            }
+            .valignIn{
+                display: inline-block;
+                vertical-align: middle;
+                line-height: normal; 
             }
             #uploadNew    {
                 width: 100%;
