--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -3,7 +3,11 @@
                 -moz-box-sizing: border-box; 
                 -webkit-box-sizing: border-box;
                 word-wrap:break-word; 
-                font-family:            }   
+                font-family:            
+            }
+            .fullW{
+                width: 100%;
+            }   
             /*.stage_btm_1 { 
                 position: fixed;
                 bottom: 50px; 
@@ -63,8 +67,9 @@
         }
         #tagline_box{
             height: 150px;
-            background-image: url("/assets/images/blueDots.jpg");
-            color: grey;
+            background: rgb(0, 52, 89) none repeat scroll 0% 0%;
+            color: white;
+            text-shadow:0px 0px 2px black;
             font-family: "Times new roman";
             padding: 40px 9.5%;
             font-size: 30px;
@@ -91,7 +96,7 @@
         }
 
         #clubs_list {
-            padding: 10px;
+            padding: 15px;
             
 
 
