--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -187,7 +187,9 @@
             .w2g    {
                 background-color: rgba(255,255,255,0.8);
                 padding: 10px 10px !important;
+               
                 border: 0px;
+                 border-bottom: 1px solid rgba(0, 0, 255, 0.2);
                 color: #337AB7;
                 font-size: 12px;
                 border-radius: 0px;
