--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -132,7 +132,7 @@
                   
                   <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" style="position:fixed;top:65px;left:0px" id="xxxx">
                     <md-toolbar class="md-theme-light">
-                      <h1 class="md-toolbar-tools">{{getCurrentUser().name}}</h1>
+                      <h1 class="md-toolbar-tools"><span class="glyphicon glyphicon-user"> </span> {{getCurrentUser().name}}</h1>
                     </md-toolbar>
                     <md-content>
                       
