--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -439,8 +439,7 @@
                 position: relative;
                 text-shadow: 1px 1px 2px black, 0 0 25px blue, 1px 1px 5px darkblue;
                 float: left;
-                padding: 0px; 
-                height: 180px;     
+                padding: 0px;     
             }
             .thumbs_in:hover .thumbs_in{
                 overflow: visible;
@@ -558,6 +557,21 @@
                 height: auto;
             }
 
+            #respectToast{
+                width:250px;
+                height:65px;
+                position:absolute;
+                bottom:30px;
+                right:30px;
+                z-index:1000;
+                background-color: #ff1654;
+                font-size: 15px;
+                font-family: 'Abel';
+                text-shadow:0px 0px 5px grey;
+                color: white;
+                border-radius: 10px;
+                box-shadow: 0px 0px 5px grey;
+            }
 
             #textarea{ 
             
