--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -104,7 +104,7 @@
 		left: 10px;
 		z-index: 10;
 		font-size: 11px;
-		color: black;
+		color: #337AB7;
 		line-height: 13px;
 	}
 	#notif_uploader{
