--- a/client/components/modal/modal.css
+++ b/client/components/modal/modal.css
@@ -216,3 +216,11 @@ md-content{
 @keyframes example {
     0%   {left:0px; top:50px;}
     100% { left:0px; top:0px;}
+
+}
+    .scropArea {
+  background: #E4E4E4;
+  overflow: hidden;
+  width:500px;
+  height:350px;
+}
