edit booking done

--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -17,8 +17,8 @@
                 position: absolute;
                 text-align: center;
                 top: 160px;
-                width: 500px;
-                left: 31.6%;
+                width: 40%;
+                left: 30%;
                 padding: 20px !important;
             }
 
