multiple booking done

--- a/client/components/modal/modal.css
+++ b/client/components/modal/modal.css
@@ -224,3 +224,14 @@ md-content{
   width:500px;
   height:350px;
 }
+
+  .well > span {
+    background-color: limegreen;
+    border-radius: 32px;
+    color: black;
+  }
+  .partially button span {
+    background-color: orange;
+    border-radius: 32px;
+    color: black;
+  }
