--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -95,7 +95,7 @@
                     <div class="col-md-8">
 
 					    <div style="display:inline-block; min-height:290px;">
-					      <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm" custom-class="getDClass(dt,mode)" datepicker-mode="day" id="hi"   date-disabled="disabled(date, mode)"></datepicker>
+					      <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm" custom-class="getDClass(dt,mode)" datepicker-mode="day" id="hi" ></datepicker>
 					    </div>
 					</div>
 
@@ -197,7 +197,7 @@
 		          			<span style="color:white">End Date</span><br>
 			          		<div class="col-md-6 datepckr" ng-controller="DatepickerDemoCtrl">
 					            <p class="input-group">
-						            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="form.dtED" is-open="openedED" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions"  ng-required="false" close-text="Close" style="height:34px" />
+						            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="form.dtED" is-open="openedED" min-date="form.dtSD" max-date="'2037-06-22'" datepicker-options="dateOptions"  ng-required="false" close-text="Close" style="height:34px" />
 									<span class="input-group-btn">
 									    <button type="button" class="btn btn-default" ng-click="openED($event)"><i class="glyphicon glyphicon-calendar"></i></button>
 									</span>
