--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -471,18 +471,22 @@
 		  <div class="thumbs_wrap col-md-12"  style="border:2px solid white;padding:10px;">
             
             <div >
-              	<form name="form"  ng-model="form" ng-submit="declareRes(a,event.resNo)">
+              	<form name="form"  ng-model="form" ng-submit="declareRes(a,event)">
                   <div class="tab-content">
                     <div class="tab-pane fade in active" id="upload_form2">
                     
                         <div class="col-md-12">
                           	<div class="form-group">
 	                      	   <input type="text" class="form-control upld_form" ng-model="event.resNo" placeholder="How many should be selected?" required>
-	                     	</div>                      
+	                     	</div> 
+	                     	<div class="form-group">
+		                        <textarea class='autoExpand form-control' rows='2' data-min-rows='2' placeholder='Would you like to give a message...' id="textarea" style="width:100%" ng-model="event.message" data-bind="hasfocus: true">
+		                         </textarea>   
+		                    </div>                     
                       
                       		<div class="col-md-12 box_shadow_dwn " style="padding:10px">
 					            <md-subheader class="md-no-sticky">Selected Entries</md-subheader>
-					        	<div class="col-md-4" ng-repeat="entry in event.entries | orderBy:myValueFunction | limitTo:event.resNo"  style="padding:10px" ng-init="a[$index]=entry">
+					        	<div class="col-md-4" ng-repeat="entry in event.entries | orderBy:myValueFunction | limitTo:event.resNo"  style="padding:10px" ng-init="entries[$index]=entry">
 					             	<span>{{entry.user.name}}</span>
 					                <img alt="{{entry.entry.entry }}" ng-src="{{entry.entry.entry }}" width="100%" height="auto" />                
 					                <rating ng-model="entry.entry.rating" max="max" readonly="isReadonly" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" ng-click="ratePost(entry.entry.rating,entry.entry._id)"></rating>
