--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -53,6 +53,17 @@ body {
             top:10px;
             z-index: 10000;
         }
+        .top_logo_sec2 {
+            height: 45px;            
+            width:100%;
+            background-color: rgb(33,33,33);
+            background-size:10px 100%;
+            box-sizing:border-box;
+            box-shaddow:0px 5px 10px BLACK;
+            position:fixed;
+            top:10px;
+            z-index: 10000;
+        }
 
         #hidden {
             height:65px;
