--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -28,7 +28,7 @@
 
 #login  {
   
-  background-image: url('assets/12');
+  background: #e4fde1 ;
   width: 100%;
   color: rgba(0,0,0,0.7);
   z-index: 10;
@@ -46,9 +46,10 @@
   padding: 20px 50px;
 }
 #video_slot{
-    margin: 50px 10%;
+    margin: 20px 10%;
     width: 80%;
     height: 316px;
+    box-shadow: 0px 0px 10px grey;
     background-color: rgb(230,230,230);
 }
 #login #logob{
@@ -68,10 +69,9 @@
 
 #login_logo{
   background-color: #028090;
-  height: 270px;
   width: 100%;
   padding: 50px 100px 0px 0px;
-  margin-bottom: -20px;
+  margin-bottom:-230px;
 }
 #login_left img{
   position: relative;
@@ -83,8 +83,175 @@
 }
 #login_right{
   padding: 0px 70px 0px 0px;
+  font-family: lithosPro,verdana,arial;
 }
 
 .bgvd{
   background-color: #028090;
 }
+.bglgr{
+  background: #e4fde1;
+}
+.colorgr{
+  color: #e4fde1;
+}
+
+
+/*png elements*/
+
+#element1{
+  position: fixed;
+  top: 20px;
+  left: 30px;
+  width: 130px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element2{
+  position: fixed;
+  top: 15%;
+  left: 50%;
+  width: 130px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element3{
+  position: fixed;
+  top:0px;
+  right: 50px;
+  width: 100px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element4{
+  position: fixed;
+  bottom: 60%;
+  right: 20px;
+  width: 90px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: elementx 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:elementx 3s linear infinite; 
+}
+#element5{
+  position: fixed;
+  top: 50%;
+  right: 0px;
+  width: 120px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: elementx 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:elementx 3s linear infinite;
+}
+#element6{
+  position: fixed;
+  bottom: 0px;
+  right: 40px;
+  width: 100px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element7{
+  position: fixed;
+  bottom: 0px;
+  right: 20%;
+  width: 100px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element8{
+  position: fixed;
+  bottom: 0px;
+  right: 40%;
+  width: 100px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element9{
+  position: fixed;
+  bottom: 0px;
+  right: 60%;
+  width: 90px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element10{
+  position: fixed;
+  bottom: 0px;
+  left: 17%;
+  width: 120px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+#element11{
+  position: fixed;
+  bottom: 0px;
+  left: 30px;
+  width: 100px;
+  height: auto;
+  z-index: 100;
+
+  -webkit-animation: element 5s  infinite; /* Chrome, Safari, Opera */ 
+  animation:element 3s linear infinite;
+}
+
+/*diagonal translate*/
+/* Chrome, Safari, Opera */ 
+@-webkit-keyframes element {
+    0%   {transform:translate(0px,0px);}
+    50%  {transform:translate(5px,10px);}
+    100%   {transform:translate(0px,0px);}
+}
+
+/* Standard syntax */
+@keyframes element {
+    0%   {transform:translate(0px,0px);}
+    50%  {transform:translate(5px,-10px);}
+    100%   {transform:translate(0px,0px);}
+    /*75%  {top: 50px}
+    100% {top: 100px;}*/
+}
+
+/*x axis translate*/
+/* Chrome, Safari, Opera */ 
+@-webkit-keyframes elementx {
+    0%   {transform:translate(0px,0px);}
+    50%  {transform:translate(10px,0px);}
+    100%   {transform:translate(0px,0px);}
+}
+
+/* Standard syntax */
+@keyframes elementx {
+    0%   {transform:translate(0px,0px);}
+    50%  {transform:translate(10px,0px);}
+    100%   {transform:translate(0px,0px);}
+    /*75%  {top: 50px}
+    100% {top: 100px;}*/
+}
+
