--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -548,7 +548,7 @@
 				          {{errorFiles[0].size / 1000000|number:1}}MB: max 2M</i> -->
 				      <img ng-show="myForm.file.$valid" ngf-thumbnail="form.picFile" class="thumb"> <button ng-click="form.picFile = null" ng-show="form.picFile">x</button>
 				      <br>
-				      <button ng-disabled="!myForm.$valid" 
+				      <button  
 				             type="submit">Submit</button>
 				      <span class="progress" ng-show="form.picFile.progress >= 0">
 				        <div style="width:{{form.picFile.progress}}%" 
