--- a/client/app/viewPage/viewPage.css
+++ b/client/app/viewPage/viewPage.css
@@ -105,7 +105,7 @@
               
               position: relative;
             }
-            iframe {
+            #video iframe {
               height: 100%;
               
               top:0px;
