--- a/client/components/jqscripts/jqscripts.html
+++ b/client/components/jqscripts/jqscripts.html
@@ -16,7 +16,7 @@
 
 <!--Textarea script-->
 <script >
-	$(document)
+  $(document)
     .one('focus.textarea', '.autoExpand', function(){
         var savedValue = this.value;
         this.value = '';
@@ -43,9 +43,9 @@
         var trueHeight=$(window).outerHeight();
         var height;
         if(trueHeight>500)
-        	height=trueHeight;
+          height=trueHeight;
         else 
-        	height=500;
+          height=500;
         console.log($(window).scrollTop())
       if ($(window).scrollTop() > (height-65)) {
         $('.club_nav').addClass('navbar_sec_fixed');
@@ -62,24 +62,25 @@
   $(document).ready(function() {
     var trueHeight=$(window).outerHeight();
     $('#login_logo').css('height',trueHeight*0.4+'px');
-    $(window).scroll(function () {
-        //if you hard code, then use console
-        //.log to determine when you want the 
-        //nav bar to stick. 
-        trueHeight=$(window).outerHeight();
-        var height;
-        if(trueHeight>500)
-          height=trueHeight;
-        else 
-          height=500;
-        console.log($(window).scrollTop())
-      if ($(window).scrollTop() > (height-65)) {
-        $('.club_nav').addClass('navbar_sec_fixed');
-      }
-      if ($(window).scrollTop() < (height-64)) {
-        $('.club_nav').removeClass('navbar_sec_fixed');
-      }
-    });
+    $('#login_logo').css('margin-bottom',-trueHeight*0.4+'px');
+    // $(window).scroll(function () {
+    //     //if you hard code, then use console
+    //     //.log to determine when you want the 
+    //     //nav bar to stick. 
+    //     trueHeight=$(window).outerHeight();
+    //     var height;
+    //     if(trueHeight>500)
+    //       height=trueHeight;
+    //     else 
+    //       height=500;
+    //     console.log($(window).scrollTop())
+    //   if ($(window).scrollTop() > (height-65)) {
+    //     $('.club_nav').addClass('navbar_sec_fixed');
+    //   }
+    //   if ($(window).scrollTop() < (height-64)) {
+    //     $('.club_nav').removeClass('navbar_sec_fixed');
+    //   }
+    // });
   });
 </script>
 
